# figma-structured-mcp

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  run.py
src/figma_structured_mcp/: __init__.py  server.py
src/figma_structured_mcp/utils/: __init__.py  exceptions.py  file_upload.py  image_compression.py  image_export.py
tests/: test_figma_integration.py
